<?xml version="1.0"?>
<package format="2">
    <name>active_3d_planning_fiesta</name>
    <version>0.0.0</version>
    <description>Fiesta as map representation</description>

    <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>

    <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <depend>active_3d_planning_core</depend>
    <depend>fiesta</depend>
</package>
